--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "ng": "ng",
     "start": "ionic serve -o",
     "build": "ng build",
+    "build:android": "ionic cordova build android --prod --release",
+    "prepare:android": "ionic cordova prepare android --prod --no-build",
+    "emulate:android": "npm run prepare:android && ionic cordova emulate android --prod",
     "test": "ng test",
     "test:local": "ng test --code-coverage --watch --browsers=Chrome",
     "lint": "ng lint",
