--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "@ionic-native/camera": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.23.0",
+    "@ionic-native/local-notifications": "^5.23.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "core-js": "^2.5.4",
     "gradle": "^1.0.9",
     "rxjs": "~6.5.1",
@@ -81,7 +85,9 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "android"
