--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ionic-native/camera": "^5.23.0",
+    "@ionic-native/camera-preview": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.23.0",
     "@ionic-native/local-notifications": "^5.23.0",
@@ -33,6 +34,7 @@
     "cordova-android": "^8.1.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-camera-preview": "^0.11.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-nativeaudio": "^3.0.9",
@@ -87,7 +89,10 @@
       },
       "cordova-plugin-geolocation": {},
       "cordova-plugin-local-notification": {},
-      "cordova-plugin-nativeaudio": {}
+      "cordova-plugin-nativeaudio": {},
+      "cordova-plugin-camera-preview": {
+        "ANDROID_SUPPORT_LIBRARY_VERSION": "26+"
+      }
     },
     "platforms": [
       "android"
